--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.0.7",
     "aos": "^2.3.4",
     "firebase": "^11.3.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.29.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
